--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "swiper": "^4.5.1",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.5.1",
     "vue-spinner": "^1.0.4",
     "vuex": "^3.6.2"
