--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "swiper": "^4.5.1",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10.3.1",
+    "swiper": "^5.4.5",
     "vue": "^2.6.14",
-    "vue-awesome-swiper": "^3.1.3",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.5.1",
     "vue-spinner": "^1.0.4",
     "vuex": "^3.6.2"
