--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-spinner": "^1.0.4",
     "vuex": "^3.6.2"
   },
+  "proxy": "https://subtle-druid-87d9e3.netlify.app",
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
